--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,3 +117,42 @@ span {
   position: absolute;
   right: 10%;
 }
+
+p.bubble {
+  display: inline-block;
+	position: absolute;
+  right: 0;
+  top: -10rem;
+	width: 200px;
+	text-align: center;
+	line-height: 1.4em;
+	/* margin: 40px auto; */
+	background-color: #fff;
+	border: 8px solid #333;
+	border-radius: 30px;
+	font-family: sans-serif;
+	padding: 20px;
+	font-size: large;
+}
+
+/* p.bubble:before,
+p.bubble:after {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+} */
+
+/* p.speech:before {
+	left: 30px;
+	bottom: -50px;
+	border: 25px solid;
+	border-color: green transparent transparent green;
+}
+
+p.speech:after {
+	left: 38px;
+	bottom: -30px;
+	border: 15px solid;
+	border-color: red transparent transparent red;
+} */
